<resources>
    <string name="app_name">Gaming Behavioral Matchmaking System</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_birthDate">Birth Date</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_UserName">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password Confirmation</string>
    <string name="action_log_in">Login</string>
    <string name="action_log_out">Logout</string>
    <string name="action_account_create">Create New Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dropdown">Language</string>

    <string name="prompt_updateMyInfo">"Update My Info"</string>
    <string name="prompt_updateGameStyle">"Update Gaming Styles"</string>
    <string name="prompt_turnOffMatching">"Turn Off Matching"</string>
    <string name="prompt_delete_account">"Delete Account"</string>


    <!-- Bottom Nav Bar Strings -->
    <string name="matchmaking">MatchMaking</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>