<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartupActivity">

    <!-- PARENT LAYOUT COMPONENT FOR ALL ITEMS -->
    <ImageView
        android:id="@+id/IV_GBMLogo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:srcCompat="@drawable/gbm__4__3" />

    <!-- FORGOT PASSWORD LAYOUT COMPONENT -->
    <LinearLayout
        android:id="@+id/LL_ForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/TV_RP_ResetTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reset Password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_RP_ResetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text='Input your email and press "Reset" to send password reset link!'
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ET_RP_Username"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />

        <Button
            android:id="@+id/PB_PR_LoginReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape"
            android:backgroundTint="#2196F3"
            android:onClick="ForgotPassword"
            android:text="Reset"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/TV_RP_SendAgainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="ForgotPassword"
            android:text="Send Again"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <!-- SIGN UP LAYOUT COMPONENT -->
    <LinearLayout
        android:id="@+id/LL_SignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <EditText
            android:id="@+id/ET_SU_FirstNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:text="First Name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_SU_LastNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:text="Last Name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_SU_DOBInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:text="Birth Date"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_SU_EmailAddressInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:text="Email Address"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_SU_UsernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:text="User Name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ET_SU_PasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape"
            android:inputType="textPersonName"
            android:text="Password"
            android:textAlignment="center" />

        <Button
            android:id="@+id/PB_SU_CreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape"
            android:backgroundTint="#2196F3"
            android:inputType="textPersonName"
            android:onClick="Signup"
            android:text="New Account"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/PT_SI_CreateNewAccount2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="SignInClick"
            android:text="Have Account? Sign In"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/PT_SI_ForgotPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="ForgotPasswordClick"
            android:text="Forgot Password?"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- SIGN IN LAYOUT COMPONENT -->
    <LinearLayout
        android:id="@+id/LL_SignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/ET_SI_Username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:hint="@string/prompt_UserName"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/ET_SI_Password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/PB_SI_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape"
            android:backgroundTint="#2196F3"
            android:onClick="Login"
            android:text="@string/action_log_in"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/PT_SI_CreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="SignUpClick"
            android:text="Sign Up"
            android:textColor="@color/purple_500"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/PT_SI_ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:onClick="ForgotPasswordClick"
            android:text="Forgot Password?"
            android:textColor="@color/purple_200"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>